--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Library</h1>
-    <button id="add-book">Add New</button>
+    <button id="add-new-book-button">Add New</button>
     <table>
       <thead>
         <th>ID</th>
@@ -17,6 +17,26 @@
         <th>Pages</th>
         <th>Completed</th>
       </thead>
+      <tbody class="add-new">
+        <tr>
+          <td>
+            <input type="text" />
+          </td>
+          <td>
+            <input type="text" />
+          </td>
+          <td>
+            <input type="text" />
+          </td>
+          <td>
+            <input type="text" />
+          </td>
+          <td>
+            <input type="checkbox" />
+          </td>
+          <td><button>+</button></td>
+        </tr>
+      </tbody>
       <tbody>
         <tr>
           <td class="id" contenteditable="true">1</td>
